<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cn.ypbin</groupId>
    <artifactId>ypbin-starter</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>${project.artifactId}</name>
    <description>ypbin-starter —— 一套基于 Spring Boot 的开箱即用基础能力 starter 集合</description>
    <url>https://github.com/wenbin-wb/ypbin-starter</url>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <!-- 发布中央仓库必需元数据：请按实际仓库/作者信息核对修改 -->
    <organization>
        <name>ypbin</name>
        <url>https://github.com/wenbin-wb</url>
    </organization>

    <developers>
        <developer>
            <id>wenbin</id>
            <name>wenbin</name>
            <url>https://github.com/wenbin-wb</url>
            <roles>
                <role>author</role>
            </roles>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/wenbin-wb/ypbin-starter.git</connection>
        <developerConnection>scm:git:https://github.com/wenbin-wb/ypbin-starter.git</developerConnection>
        <url>https://github.com/wenbin-wb/ypbin-starter</url>
        <tag>HEAD</tag>
    </scm>

    <modules>
        <module>ypbin-starter-dependencies</module>
        <module>ypbin-starter-bom</module>
        <module>ypbin-starter-core</module>
        <module>ypbin-starter-json</module>
        <module>ypbin-starter-web</module>
        <module>ypbin-starter-data</module>
        <module>ypbin-starter-cache</module>
        <module>ypbin-starter-security</module>
        <module>ypbin-starter-api-doc</module>
        <module>ypbin-starter-storage</module>
        <module>ypbin-starter-log</module>
        <module>ypbin-starter-tools</module>
        <module>ypbin-starter-extension-tenant</module>
        <module>ypbin-starter-extension-crud</module>
        <module>ypbin-starter-extension-datapermission</module>
        <module>ypbin-starter-excel</module>
        <module>ypbin-starter-captcha</module>
        <module>ypbin-starter-messaging</module>
        <module>ypbin-starter-sensitive-words</module>
        <module>ypbin-starter-i18n</module>
        <module>ypbin-starter-api-crypto</module>
        <module>ypbin-starter-social</module>
        <module>ypbin-starter-sign</module>
        <module>ypbin-starter-cloud-core</module>
        <module>ypbin-starter-cloud-nacos</module>
        <module>ypbin-starter-cloud-loadbalancer</module>
        <module>ypbin-starter-cloud-observability</module>
        <module>ypbin-starter-cloud-sentinel</module>
        <module>ypbin-starter-cloud-gateway</module>
        <module>ypbin-starter-async</module>
        <module>ypbin-starter-job</module>
        <module>ypbin-starter-license</module>
        <module>ypbin-starter-app-web</module>
        <module>ypbin-starter-app-cloud</module>
    </modules>

    <properties>
        <revision>1.4.0-SNAPSHOT</revision>
        <java.version>21</java.version>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <flatten-maven-plugin.version>1.6.0</flatten-maven-plugin.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <release>${maven.compiler.release}</release>
                        <parameters>true</parameters>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <!-- 统一 ${revision} 版本号，install/deploy 时展开为真实版本 -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten-maven-plugin.version}</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- Central Portal 发布插件：根聚合 pom 无 parent 继承不到，需独立声明 -->
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.8.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                    <autoPublish>true</autoPublish>
                    <waitUntil>uploaded</waitUntil>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <!-- 发布 profile：根聚合 pom 无 parent，需自带 GPG 签名（否则上传的 .pom 缺 .asc 校验失败） -->
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.4</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
